--- a/VSUQSM/src/app/features/admin-layout/a-user-management/a-user-management.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-user-management/a-user-management.component.html
@@ -7,11 +7,11 @@
     <div class="flex justify-between items-center">
       <button
         (click)="openModal()"
-        class="flex items-center justify-center px-6 py-3 bg-lime-700 text-white font-bold text-xl rounded-lg shadow-md hover:bg-lime-800 transition duration-300"
+        class="flex items-center justify-center px-4 py-2 bg-lime-700 text-white font-semibold text-base rounded-md shadow-md hover:bg-lime-800 transition duration-300"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 mr-2"
+          class="h-5 w-5 mr-2"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -25,17 +25,17 @@
         </svg>
         Create New Account
       </button>
-      <div class="flex gap-4" *ngIf="selectedUsers.length > 0">
+      <div class="flex gap-2" *ngIf="selectedUsers.length > 0">
         <button
           *ngIf="selectedUsers.length === 1"
           (click)="editSelectedUser()"
-          class="px-6 py-3 bg-blue-500 text-white font-bold text-xl rounded-lg shadow-md hover:bg-blue-600 transition duration-300"
+          class="px-4 py-2 bg-blue-500 text-white font-semibold text-base rounded-md shadow-md hover:bg-blue-600 transition duration-300"
         >
           Edit
         </button>
         <button
           (click)="deleteSelectedUsers()"
-          class="px-6 py-3 bg-red-500 text-white font-bold text-xl rounded-lg shadow-md hover:bg-red-600 transition duration-300"
+          class="px-4 py-2 bg-red-500 text-white font-semibold text-base rounded-md shadow-md hover:bg-red-600 transition duration-300"
         >
           Delete
         </button>
@@ -51,11 +51,11 @@
             type="text"
             id="searchUser"
             placeholder="Search for a user"
-            class="w-full py-3 pl-10 pr-4 text-gray-700 bg-white border rounded-md focus:border-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-40"
+            class="w-full py-2 pl-10 pr-4 text-gray-700 bg-white border rounded-md focus:border-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-40"
           />
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="absolute top-3 left-3 h-5 w-5 text-gray-400"
+            class="absolute top-2 left-3 h-5 w-5 text-gray-400"
             fill="none"
             viewBox="0 0 24 24"
             stroke="currentColor"
@@ -70,39 +70,39 @@
         </div>
       </form>
       <div class="overflow-x-auto">
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-50">
+        <table class="min-w-full divide-y divide-[#22381F]">
+          <thead class="bg-[#22381F]">
             <tr>
-              <th class="px-6 py-3">
-                <input type="checkbox" (change)="toggleSelectAll($event)" />
+              <th class="px-6 py-4">
+                <input type="checkbox" (change)="toggleSelectAll($event)" class="text-white" />
               </th>
               <th
                 scope="col"
-                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                class="px-6 py-4 text-left text-sm font-bold text-white uppercase tracking-wider"
               >
                 Name
               </th>
               <th
                 scope="col"
-                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                class="px-6 py-4 text-left text-sm font-bold text-white uppercase tracking-wider"
               >
                 Username
               </th>
               <th
                 scope="col"
-                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                class="px-6 py-4 text-left text-sm font-bold text-white uppercase tracking-wider"
               >
-                Department
+                Location
               </th>
               <th
                 scope="col"
-                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                class="px-6 py-4 text-left text-sm font-bold text-white uppercase tracking-wider"
               >
                 Type
               </th>
               <th
                 scope="col"
-                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                class="px-6 py-4 text-left text-sm font-bold text-white uppercase tracking-wider"
               >
                 Status
               </th>
@@ -113,7 +113,7 @@
               *ngFor="let user of paginatedUsers"
               (click)="toggleRowSelection(user)"
               [ngClass]="{ 'bg-gray-100': user.selected }"
-              class="cursor-pointer"
+              class="cursor-pointer hover:bg-gray-50"
             >
               <td class="px-6 py-4 whitespace-nowrap">
                 <input
@@ -124,14 +124,14 @@
               </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.fullName }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.username }}</td>
-              <td class="px-6 py-4 whitespace-nowrap">{{ user.department }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ user.location }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.type }}</td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+              <td class="px-6 py-4 whitespace-nowrap">
                 <span
-                  class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full"
+                  class="px-2 py-1 inline-flex text-xs leading-5 font-semibold rounded-full"
                   [ngClass]="{
-                    'bg-green-100 text-green-800': user.status === 'Online',
-                    'bg-red-100 text-red-800': user.status === 'Offline'
+                    'bg-green-100 text-green-800': user.status === 'Enabled',
+                    'bg-red-100 text-red-800': user.status === 'Disabled'
                   }"
                 >
                   {{ user.status }}
@@ -191,7 +191,7 @@
   <app-create-account-modal
     *ngIf="showModal"
     [editingUser]="selectedUser"
-    (close)="closeModal()"
+    (cgitlose)="closeModal()"
     (accountCreated)="onAccountCreated($event)"
   ></app-create-account-modal>
 
