improved sidebar hehe updated

--- a/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
@@ -16,7 +16,7 @@
         </div>
 
         <!-- Widgets Section -->
-        <div class="flex flex-col lg:w-3/5 w-full">
+        <div class="flex flex-col lg:w-3/5 w-full"> 
           <div class="grid grid-cols-1 md:grid-cols-3 gap-2 mt-2">
             <!-- Time and Date Widget -->
             <div class="flex items-center justify-between bg-neutral-800 text-white rounded-xl shadow-sm p-3">
@@ -75,7 +75,7 @@
       <!-- Announcement Section with Scrolling Effect -->
       <div class="relative bg-white text-xl font-bold text-lime-900 px-10 py-3 mt-6 overflow-hidden">
         <div class="announcement-scroll">
-          Announcement - Important updates will be shared here. Stay tuned for more information. Announcement - Important updates will be shared here. Stay tuned for more information.
+          Announcement - Important updates will be shared here. Stay tuned for more information.
         </div>
       </div>
     </div>
