--- a/VSUQSM/src/app/features/admin-layout/a-user-management/a-user-management.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-user-management/a-user-management.component.html
@@ -92,7 +92,7 @@
                 scope="col"
                 class="px-6 py-4 text-left text-sm font-bold text-white uppercase tracking-wider"
               >
-                Location
+                Department
               </th>
               <th
                 scope="col"
@@ -124,14 +124,14 @@
               </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.fullName }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.username }}</td>
-              <td class="px-6 py-4 whitespace-nowrap">{{ user.location }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ user.department }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.type }}</td>
               <td class="px-6 py-4 whitespace-nowrap">
                 <span
                   class="px-2 py-1 inline-flex text-xs leading-5 font-semibold rounded-full"
                   [ngClass]="{
-                    'bg-green-100 text-green-800': user.status === 'Enabled',
-                    'bg-red-100 text-red-800': user.status === 'Disabled'
+                    'bg-green-100 text-green-800': user.status === 'Online',
+                    'bg-red-100 text-red-800': user.status === 'Offline'
                   }"
                 >
                   {{ user.status }}
@@ -191,7 +191,7 @@
   <app-create-account-modal
     *ngIf="showModal"
     [editingUser]="selectedUser"
-    (cgitlose)="closeModal()"
+    (close)="closeModal()"
     (accountCreated)="onAccountCreated($event)"
   ></app-create-account-modal>
 
