--- a/VSUQSM/src/app/features/admin-layout/a-contentmgmt/a-contentmgmt.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-contentmgmt/a-contentmgmt.component.html
@@ -9,7 +9,7 @@
 
   
   <div class="bg-white rounded-lg shadow-lg px-8 pb-8">
-    <nav class="flex flex-wrap gap-2 items-center justify-start w-full mb-4">
+    <nav class="flex flex-wrap gap-2 items-center justify-start w-full">
       <a href="#" class="px-4 py-1 text-sm text-white bg-neutral-800 rounded-t-lg shadow-sm transition duration-300 ease-in-out hover:bg-neutral-700">Registrar</a>
       <a href="#" class="px-4 py-1 text-sm bg-zinc-200 rounded-t-lg shadow-sm transition duration-300 ease-in-out hover:bg-zinc-300">Cash Division</a>
       <a href="#" class="px-4 py-1 text-sm bg-zinc-200 rounded-t-lg shadow-sm transition duration-300 ease-in-out hover:bg-zinc-300">Accounting Office</a>
