may nakalimutan hehe

--- a/VSUQSM/src/app/features/admin-layout/a-kiosk-management/a-kiosk-management.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-kiosk-management/a-kiosk-management.component.html
@@ -1,6 +1,6 @@
 <main class="flex flex-col">
     <h1 class="text-4xl font-bold text-neutral-800 max-md:max-w-full">
-      Terminal Management
+      Kiosk Management
     </h1>
     <img
       loading="lazy"
